Correct typo (it's -> its) - spotted by coekie.
git-svn-id: http://svn.irssi.org/repos/irssi/trunk@5172 dbcabf3a-b0e7-0310-adc4-f8d773084564

--- a/docs/help/in/exec.in
+++ b/docs/help/in/exec.in
@@ -28,7 +28,7 @@ Processes can be accessed either by their ID or name if you named it.
 Process identifier must always begin with '%%' character, like %%0 or
 %%name.
 
-Once the process is started, it's output can still be redirected
+Once the process is started, its output can still be redirected
 elsewhere with the -window, -msg, etc. options. You can send text to
 standard input of the process with -in option.
 
