Readd Freenode to the list of IRC networks in the default configuration file.
git-svn-id: http://svn.irssi.org/repos/irssi/trunk@5190 dbcabf3a-b0e7-0310-adc4-f8d773084564

--- a/irssi.conf
+++ b/irssi.conf
@@ -1,6 +1,7 @@
 servers = (
   { address = "eu.irc6.net"; chatnet = "IRCnet"; port = "6667"; },
   { address = "open.ircnet.net"; chatnet = "IRCnet"; port = "6667"; },
+  { address = "chat.freenode.net"; chatnet = "Freenode"; port = "6667"; },
   { address = "irc.efnet.org"; chatnet = "EFNet"; port = "6667"; },
   { address = "irc.undernet.org"; chatnet = "Undernet"; port = "6667"; },
   { address = "irc.dal.net"; chatnet = "DALnet"; port = "6667"; }, 
@@ -25,6 +26,12 @@ chatnets = {
     type = "IRC";
     max_kicks = "4";
     max_msgs = "3";
+    max_whois = "1";
+  };
+  Freenode = {
+    type = "IRC";
+    max_kicks = "1";
+    max_msgs = "4";
     max_whois = "1";
   };
   Undernet = {
