Clarify delimiter needed for -channels option of /HILIGHT and /IGNORE commands.
git-svn-id: http://svn.irssi.org/repos/irssi/trunk@5206 dbcabf3a-b0e7-0310-adc4-f8d773084564

--- a/docs/help/in/hilight.in
+++ b/docs/help/in/hilight.in
@@ -12,7 +12,7 @@
    -actcolor: Color to show in statusbar activity, or don't change if %%n.
    -level: Match only for <level> messages, default is
            publics,msgs,notices,actions
-   -channels: Match only in <channels>
+   -channels: Match only in <channels> (comma separated list)
    -priority: Priority to use when multiple hilights match. Default is 0.
 
 Examples:
