--- a/docs/help/in/ignore.in
+++ b/docs/help/in/ignore.in
@@ -11,7 +11,7 @@
               "tofinnishnick: blahblah".
     -network: Ignore only on this network.
     -ircnet: Same as -network. Deprecated. Do not use.
-    -channels: Ignore only in channels
+    -channels: Ignore only in channels (comma separated list)
     -time: <secs> seconds after the ignore is removed
     <mask>: Either a nick mask or list of channels
     <levels>: List of levels to ignore. You can use -<level> to remove levels
