Document available options for /JOIN command.
git-svn-id: http://svn.irssi.org/repos/irssi/trunk@5207 dbcabf3a-b0e7-0310-adc4-f8d773084564

--- a/docs/help/in/join.in
+++ b/docs/help/in/join.in
@@ -1,6 +1,10 @@
 
 @SYNTAX:join@
 
+   -window: Join channel, placing channel window item in currently active window
+   -invite: Join last invited channel
+   -<server tag>: Join channel on server with specified tag
+
 Joins a specified channel. Channel names usually begin with #-sign,
 which may be omitted here.
 
