Enable irssi-proxy by default.
(Why was this disabled by default?  There's nothing special about this
feature; I don't think it should even be optional.)

--- a/configure.in
+++ b/configure.in
@@ -51,13 +51,13 @@ AC_ARG_WITH(bot,
 	want_irssibot=no)
 
 AC_ARG_WITH(proxy,
-[  --with-proxy            Build irssi-proxy],
+[  --without-proxy         Exclude irssi-proxy],
 	if test x$withval = xno; then
 		want_irssiproxy=no
 	else
 		want_irssiproxy=yes
 	fi,
-	want_irssiproxy=no)
+	want_irssiproxy=yes)
 
 AC_ARG_WITH(terminfo,
 [  --without-terminfo      Use curses backend instead of terminfo],
